Fixed column adjustments for card lists on smaller screens for both sections on the sequencing solution page
sequencing-solutions/instruments.html
CHANGED row and column ordering of elements in container
CHANGED text-alignment of bullet points to left-aligned
ADD two-columns class that acts as a card column with @media breakpoint to adapt column ordering to  smaller sizes
REMOVED card-columns class and unnecessary bs4-justify-content-center class from bs4-row

sequencing-solutions/methods.html
CHANGED container to bs4-container
ADD section-title class to section header
CHANGED row and column ordering of elements in container
CHANGED text-alignment from center to left
REMOVED unnecessary bs4-justify-content center class from bs4-row

custom.css
ADD two-column class that acts the same as the bs4-card-columns class
ADD media breakpoint for the two-columns class
REMOVED original two-column class since it prevented correct card list ordering on smaller screens

--- a/custom.css
+++ b/custom.css
@@ -62,12 +62,6 @@ ol > li.bs4-list-group-item {
   color: black;
 }
 
-/* display the content in exactly 2 columns */
-
-.two-columns {
-  column-count: 2 !important;
-}
-
 /* styling based on project-type */
 
 li.dfg-only {
@@ -296,5 +290,18 @@ img.img-cover {
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
+  }
+}
+
+/* display the content in exactly 2 columns for the two-columns class*/
+@media (min-width: 576px) 
+{
+  .two-columns {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+     column-count: 2;
+     margin-bottom: 0.75rem;
+     display: inline-block;
+     width: 100%;
   }
 }
